Update template files

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*!
 Theme Name: usponsive
 Theme URI: http://usponsive.com
-Author: Higher Level Web
+Author: Web Integrated Solutions
 Author URI: http://usponsive.com
 Description: Responsive, Cross-Browser/Device Compatible, Highly Accessible Theme adapted for WordPress.
 Version: 1.0.0
